[package]
name = "diva"
version = "0.0.0"
authors = ["Francesca Lovebloom <franlovebloom@gmail.com>"]
edition = "2021"
description = "Opinionated convenience wrappers for `std::process::Command` and friends."
documentation = "https://docs.rs/diva"
repository = "https://github.com/francesca64/diva"
readme = "README.md"
keywords = ["process", "shell", "command"]
categories = ["rust-patterns"]
license = "Apache-2.0 OR MIT"

[dependencies]
log = "0.4.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2.81"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["minwinbase"] }

[dev-dependencies]
simple_logger = "4.1.0"
